--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
   "content_scripts":[
     {
       "matches": ["<all_urls>"],
-      "js": ["content_scripts/form-detector.js"]
+      "js": ["content_scripts/form-detector.js", 
+             "content_scripts/categorizer.js"]
     }
   ],
 
