communication between background and form-detector (testet) on pageload, check url against local storage entries

--- a/manifest.json
+++ b/manifest.json
@@ -21,13 +21,14 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content_scripts/form-detector.js", 
-             "content_scripts/categorizer.js"]
+             "content_scripts/categorizer.js"],
+       "css" : ["content_scripts/inject.css"]
     }
   ],
 
   "background": {
   "scripts": ["background/background.js"],
-  "page": ["background/background.php"]
+  "page": ["background/background.html"]
 },
 
   "browser_action": {
