fixed error caused by manifest.json: do not include CSS files from CDN

--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,7 @@
       "js": ["content_scripts/require.js", 
       	"content_scripts/form-detector.js", 
              "content_scripts/categorizer.js"],
-       "css" : ["content_scripts/inject.css", 
-       	"https://fonts.googleapis.com/icon?family=Material+Icons"]
+       "css" : ["content_scripts/inject.css"]
     }
   ],
 
