--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,8 @@
   "content_scripts":[
     {
       "matches": ["<all_urls>"],
-      "js": ["content_scripts/require.js", 
-      	"content_scripts/form-detector.js", 
+      "js": ["content_scripts/jquery.js",
+            "content_scripts/form-detector.js", 
              "content_scripts/categorizer.js"],
        "css" : ["content_scripts/inject.css"]
     }
