--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
       "matches": ["<all_urls>"],
       "js": [
         "content_scripts/jquery.js",
-        "http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js",
+        "content_scripts/psl.min.js",
         "content_scripts/form-detector.js", 
         "content_scripts/categorizer.js"],
       "css" : ["content_scripts/inject.css"]
