--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
         "content_scripts/inject.css"]
     }
   ],
-    "background_page": "background/background.html",
+  "background_page": "background/background.html",
   
   "chrome_ui_overrides": {
     "bookmarks_ui": {
@@ -41,21 +41,23 @@
   },
 
   "background": {
-    
+
     "scripts": ["background/background.js"],
     "page": ["background/background.html"]
   },
 
   "browser_action": {
     "default_icon": "icons/icon-48.png",
-    "default_title": "PRM",
-    "default_popup": "popup/popup_default.html"
+    "default_title": "PWRM",
+    // "default_popup": "popup/popup_default.html"
+    "default_popup": "popup/popup_simple.html"
   },
 
 
+
   "web_accessible_resources": [
-      "content_scripts/hintbox_snippet.html",
-      "content_scripts/material-icons/*"
-]
+    "content_scripts/hintbox_snippet.html",
+    "content_scripts/material-icons/*"
+  ]
 
 }
