--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
 
   "content_scripts":[
     {
-      "matches": ["<all_urls>"],
+     "matches" : ["*://*/*"],
       "js": [
         "content_scripts/jquery.js",
         "content_scripts/psl.min.js",
@@ -37,7 +37,7 @@
     }
   ],
   "background_page": {
-    "scripts": ["background/scripts/MVC_Controller_Managerpage.js"],
+    "scripts": ["background/background.js"],
     "page": ["background/background.html"]
   },
 
