--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "Password Reuse Manager",
   "version": "1",
-  "description": "Here comes my description", 
+  "description": "A password manager that helps to organise reused passwords without storing secret information.", 
     // TODO
   "homepage_url": "https://gitlab.lrz.de/fuasmattn/password-reuse-manager",
   "icons": {
