--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,14 @@
 {
 
   "manifest_version": 2,
-  "name": "Password Reuse Manager",
-  "version": "1",
+  "name": "Password Reuse Manager for Firefox",
+  "version": "1.1",
   "description": "A password manager that helps to organise reused passwords without necessarily storing secret information.", 
   "homepage_url": "https://gitlab.lrz.de/fuasmattn/password-reuse-manager",
   "icons": {
-    "48": "icons/icon-48.png"
+    "48": "icons/icon-48.png",
+    "96": "icons/icon-48.png",
+    "128": "icons/icon-48.png"
 
   },
 
