--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
 
   "content_scripts":[
     {
+      "run_at": "document_start",
      "matches" : ["*://*/*"],
       "js": [
         "content_scripts/jquery.js",
@@ -31,7 +32,7 @@
         "content_scripts/sha512.js",
         "content_scripts/showPW.js", 
         "content_scripts/form-detector.js",
-        "content_scripts/categorizer.js"],
+        "content_scripts/mutation-observer.js"],
       "css" : [
         "content_scripts/material-icons/material-icons.css",
         "content_scripts/inject.css"]
