--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
   "manifest_version": 2,
   "name": "Password Reuse Manager for Firefox",
-  "version": "1.54",
+  "version": "1.55",
   "description": "A password manager that helps to organise reused passwords without necessarily storing secret information.", 
   "homepage_url": "https://gitlab.lrz.de/fuasmattn/password-reuse-manager",
   "icons": {
@@ -11,6 +11,12 @@
     "128": "icons/icon-128.png"
 
   },
+  "applications": {
+  "gecko": {
+    "id": "pwrm@fuasmattn.de",
+    "strict_min_version": "42.0"
+  }
+},
 
   "permissions": [
     "activeTab",
